# bio_sim

./: .gitignore  PLAN.md  README.md  grasp_probe.py  main.py  nav_probe.py  play.py  pyproject.toml
G2_omnipicker/: robot_scoop.usda
G2_omnipicker/configuration/: Cam_L.usd  Cam_R.usd  robot_base.usd  robot_physics.usd  robot_robot.usd  robot_sensor.usd
assets/robot/G1/: robot_center.usda
assets/robot/G2/: G2_omnipicker_fixed_dual_temp.usd
assets/robot/G2/configuration/: Cam.usd  G2_omnipicker_fixed_dual_temp_base.usd  G2_omnipicker_fixed_dual_temp_physics.usd  robot_physics.usd  robot_robot.usd
assets/robot/r1pro/usd/: r1pro_holonomic.usda
bio_sim/: __init__.py  __main__.py  asset_lib.py  cli.py  commands.py  runner.py  server.py  specs.py
bio_sim/config/: task_demo.yaml  task_pick_place.yaml
bio_sim/config/robots/: g2.yaml  g2_demo.yaml  r1pro.yaml
bio_sim/robot/: __init__.py  arm.py  base.py  g2.py  gripper.py  holonomic.py  r1pro.py  registry.py  robot_base.py
bio_sim/scene/: __init__.py  bio_scene.py  demo_scene.py  lighting.py  ot_one_scene.py  room.py
bio_sim/sim/: __init__.py  app.py
bio_sim/skills/: __init__.py  grasp.py  move_arm.py  navigate.py  skill.py
bio_sim/tasks/: __init__.py  demo.py  pick_place.py
config/curobo/configs/robot/: G2_omnipicker_fixed_dual.yml  R1Pro_arm_no_torso.yml
curobo_robot/: g2_motion_gen_reacher.py  swerve_base.py
curobo_robot/assets/robot/G1/: G1_omnipicker.urdf
curobo_robot/assets/robot/G2/: config.yaml  robot.usd  robot.usda  robot_fix.usda
curobo_robot/assets/robot/G2/configuration/: G2_omnipicker_fixed_dual_temp_robot.usd
scripts/: curobo_g1_plan.py  curobo_smoke.py  diag_gripper_colliders.py  diag_otone_usd.py  diag_plate_physics.py  download_assets.py  extract_collision_spheres.py  fetch_assets.py  g1_biolab_pick.py  g1_smoke.py  g1_tabletop_pick.py  g2_drive_swerve.py  g2_drive_to_waypoint.py  generate_planning_urdf.py  inspect_robot.py  livestream_smoke.py  patch_g2_drive_usd.py  play.py  show_assets.py
src/bio_sim/: __init__.py
src/bio_sim/motion/: mobile_base.py  planner.py  swerve_drive.py
src/bio_sim/robot/: agibot_g1_cfg.py  agibot_g1_curobo.yml  agibot_g2_cfg.py  agibot_g2_drive_cfg.py  dexmate_cfg.py  dexmate_planning.urdf  dexmate_vega.yml
src/bio_sim/robot/spheres/: dexmate_vega_gripper.yml
src/bio_sim/scene/: bio_lab.py
